--- a/adminhomepage.html
+++ b/adminhomepage.html
@@ -20,16 +20,13 @@
   <link href="./assets/css/bootstrap-select.css" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="./assets/demo/demo.css" rel="stylesheet" />
-  
-  
-  
 
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg bg-info">
             <div class="container">
               <div class="navbar-translate">
-                <a class="navbar-brand" href="#0">Permission Automation - Security</a>
+                <a class="navbar-brand" href="#0">Manage Appointments</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="sr-only">Toggle navigation</span>
                   <span class="navbar-toggler-icon"></span>
@@ -62,30 +59,39 @@
 	
 	<div class="section section-white" id="#let">
 		<div class="container">
-			<form action="security_home.jsp" target="security_home_frame">
+			<form action="appointmentdetails.php" target="security_home_frame">
 			<div class="row">
 			<span>
 			<div >
-				<label for="department">Department</label>
+        <form action = "manage.php">
+				<label for="department">Branch Name</label>
 				<div class="col-lg-6 col-md-8">
 					<select class="selectpicker "  name="dept" >
 						
-						<option value="IT">IT</option>
-						<option value="CSE">CSE</option>
-						<option value="ECE">ECE</option>
-						<option value="MEC">MEC</option>
+						<option value="Banglore">Banglore</option>
+						<option value="Chennai">Chennai</option>
+						<option value="Cuddalor">Cuddalor</option>
+						<option value="Kolhapur">Kolhapur</option>
+            <option value="Kolkata">Kolkata</option>
 					</select>	
 				</div>
+        <div class="form-group">
+          <label class="label-control">Date</label>
+          <input type="text" name="date"  class="form-control datetimepicker" >
+        </div>
+
+
 				</br>
-				<div class="form-group">
-					<label for="exampleInput1" class="bmd-label-floating">Student ID.No</label>
+				<!-- <div class="form-group">
+					<span for="exampleInput1" class="bmd-label-floating">Student ID.No</span>
 					<input type="text" class="form-control" name="uid" >
 				</div>
 				<div class="form-group">
 					<label class="label-control">Date</label>
 					<input type="text" name="date"  class="form-control datetimepicker" >
-				</div>
-				<button class="btn btn-rose btn-round" name="search" id="search">SEARCH</button>
+				</div> -->
+				<input type="submit" class="btn btn-rose btn-round" name="Manage" id="search"></input>
+      </form>
 				<br/>
 				<br/>
 				<br/>
