sql file changed

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-	Permission Automation - LOGIN
+	Appointment Manager - LOGIN
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -27,7 +27,7 @@
             <div class="card card-login">
               <form class="form" method="" action="login.jsp">
                 <div class="card-header card-header-primary text-center">
-                  <h4 class="card-title">Permission Automation Login</h4>
+                  <h4 class="card-title">Appointment Manager Login</h4>
                   
                 </div>
                 
