--- a/userhomepage.html
+++ b/userhomepage.html
@@ -96,7 +96,7 @@
 									<label for="exampleInput1" class="bmd-label-floating">Reason</label>
 									<input type="text" class="form-control" id="exampleInput1" name="pl_reason">
 								</div>
-								<button type="submit" class="btn btn-rose btn-round" value="pl_submit" name="pl_submit">Letter  Submit</button>
+								<button type="submit" class="btn btn-rose btn-round" value="pl_submit" name="pl_submit">Apply</button>
 							</div>
 						</div>
 						
@@ -108,7 +108,7 @@
 									<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 								</div>
 								</span>
-								<iframe class="embed-responsive-item" src="status.jsp" frameborder="0" allowfullscreen width="100%" scrolling="yes">                          
+								<iframe class="embed-responsive-item" src="randc.jsp" frameborder="0" allowfullscreen width="100%" scrolling="yes">                          
 								</iframe>
 							</div>	
 						</div>
@@ -119,7 +119,7 @@
 									<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 								</div>
 								</span>
-								<iframe class="embed-responsive-item" src="status.jsp" frameborder="0" allowfullscreen width="100%" scrolling="yes">                          
+								<iframe class="embed-responsive-item" src="inbox.jsp" frameborder="0" allowfullscreen width="100%" scrolling="yes">                          
 								</iframe>
 							</div>	
 						</div>
