--- a/adminhomepage.html
+++ b/adminhomepage.html
@@ -66,7 +66,7 @@
         <form action = "manage.php">
 				<label for="department">Branch Name</label>
 				<div class="col-lg-6 col-md-8">
-					<select class="selectpicker "  name="dept" >
+					<select class="selectpicker"  name="branch" >
 						
 						<option value="Banglore">Banglore</option>
 						<option value="Chennai">Chennai</option>
