--- a/userhomepage.html
+++ b/userhomepage.html
@@ -66,7 +66,7 @@
 							</a>
 						</li>
 					</ul>
-					<form action="apply.jsp" method="post">
+					<form action="apply.php" method="post">
 					<div class="tab-content tab-space">
 						<div class="tab-pane active" id="permission_letter">
 							<div id="inputs">
@@ -108,7 +108,7 @@
 									<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 								</div>
 								</span>
-								<iframe class="embed-responsive-item" src="randc.jsp" frameborder="0" allowfullscreen width="100%" scrolling="yes">                          
+								<iframe class="embed-responsive-item" src="randc.php" frameborder="0" allowfullscreen width="100%" scrolling="yes">                          
 								</iframe>
 							</div>	
 						</div>
@@ -119,7 +119,7 @@
 									<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 								</div>
 								</span>
-								<iframe class="embed-responsive-item" src="inbox.jsp" frameborder="0" allowfullscreen width="100%" scrolling="yes">                          
+								<iframe class="embed-responsive-item" src="inbox.php" frameborder="0" allowfullscreen width="100%" scrolling="yes">                          
 								</iframe>
 							</div>	
 						</div>
