--- a/login.html
+++ b/login.html
@@ -48,6 +48,12 @@
 				<div class="footer text-center">
                   <button type="submit" class="center btn btn-danger btn-link" >Get Started</button>
                 </div>
+				
+				<br/><br/>
+				<div class="footer text-center">
+					if you are a manager
+                  <a href="login manager.html">click here</a>
+                </div>
                 
               </form>
             </div>
