location corrected file

--- a/userhomepage.html
+++ b/userhomepage.html
@@ -73,10 +73,11 @@
 								<label for="department">Location</label>
 									<div class="col-lg-6 col-md-8">
 										<select class="selectpicker" name="user_location">
-											<option value="IT">Kukatpally</option>
-											<option value="CSE">Madhapur</option>
-											<option value="ECE">BHEL</option>
-											<option value="MEC">Gachibowli</option>
+											<option value="Banglore">Banglore</option>
+											<option value="Chennai">Chennai</option>
+											<option value="Cuddalor">Cuddalor</option>
+											<option value="Kolhapur">Kolhapur</option>
+											<option value="Kolkata">Kolkata</option>
 										</select>	
 									</div>
 								
